refactoring, adding check task, adding readme and preparing final data
