# src/main/resources/static/api.yaml
@@ -48,18 +48,35 @@ paths:
               schema:
                 $ref: '#/components/schemas/Drone'
   /drones/{droneId}:
+    parameters:
+      - name: droneId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          description: droneId
     get: #- checking loaded medication items for a given drone;
       summary: Info for a specific drone
       operationId: showDroneById
-      parameters:
-        - name: droneId
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            description: droneId
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Drone'
+    put: #- registering a drone;
+      summary: Update a drone
+      operationId: updateDrone
+
+      requestBody:
+        description: 'Drone properties'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Drone'
       responses:
         '200':
           description: OK
@@ -175,25 +192,43 @@ paths:
               schema:
                 $ref: '#/components/schemas/Medication'
   /medications/{medicationId}:
+    parameters:
+      - name: medicationId
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: integer
+          description: medicationId
     get:
       summary: Info for a specific Medication
       operationId: showMedicationById
-      parameters:
-        - name: medicationId
-          in: path
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: string
-            description: medicationId
+
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Drone'
+                $ref: '#/components/schemas/Medication'
+    put:
+      summary: Update a medication
+      operationId: updateMedications
+
+      requestBody:
+        description: 'Medication properties'
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Medication'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Medication'
   /loads:
     get:
       summary: List all Loads
@@ -207,7 +242,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Loads'
-
     post: #loading a drone with medication items;
       summary: Create a Load
       operationId: createLoad
@@ -227,6 +261,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Load'
+
+  /checks:
+    get:
+      summary: List all Checks
+      operationId: listChecks
+      parameters:
+        - in: query
+          name: pageable
+          required: false
+          schema:
+            $ref: '#/components/schemas/Pageable'
+      tags:
+        - loads
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChecksPage'
+
 components:
   schemas:
     Drone:
@@ -314,6 +369,44 @@ components:
         load:
           type: object
           $ref: '#/components/schemas/Load'
+    Pageable:
+      description: minimal Pageable query parameters
+      type: object
+      properties:
+        page:
+          type: integer
+        size:
+          type: integer
+          minimum: 2
+
+    ChecksPage:
+      type: object
+      properties:
+        size:
+          type: integer
+        page:
+          type: integer
+        pages:
+          type: integer
+        elements:
+          type: integer
+        content:
+          type: array
+          items:
+            $ref: '#/components/schemas/Checks'
+
+    Checks:
+      description: check value generated by checkBattery task
+      type: object
+      properties:
+        id:
+          type: integer
+        description:
+          type: string
+        date:
+          type: string
+
+
 
     Error:
       type: object
